--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,12 @@
   text-align: center;
 }
 
+/*
+#quote-box{
+  background-color:red; 
+}
+*/
+
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
