styled random quote machine & made responsive using Bootstrap & CSS3

--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,37 @@
+.container-fluid{
+ display: flex; 
+ align-items: center; 
+ height: 100vh; 
+}
+
+#github-link{
+ text-decoration: none; 
+}
+
+#text{
+  margin-top: 30px; 
+}
+
+#author{
+  margin-top: 10px; 
+}
+
+#new-quote{
+  margin-bottom: 15px; 
+}
+
+/*
+#quote-wrapper{
+  background-color: yellow;
+}
+*/
+
+/*
 .App {
   text-align: center;
 }
 
 /*
-#quote-box{
-  background-color:red; 
-}
-*/
-
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
@@ -37,3 +61,4 @@
     transform: rotate(360deg);
   }
 }
+*/
